examples/errors/wrongif.dvx
int main() {
  int a;
  if a { }
  if 122 { }
  if "hola" { }
  if true { }
  bool z;
  if z { }
}
